--- a/HelpKitchenProject/src/main/webapp/css/Categoriedesign.css
+++ b/HelpKitchenProject/src/main/webapp/css/Categoriedesign.css
@@ -1,22 +1,30 @@
 @charset "UTF-8";
 
-.row1 {
+
+
+.a { text-decoration:none
+}
+
+.a:hover { text-decoration:none
+}
+
+.Categorietable_row1 {
 	display: table-row;
 }
 
-.row2 {
+.Categorietable_row2 {
 	display: table-row;
 }
 
-.row3 {
+.Categorietable_row3 {
 	display: table-row;
 }
 
-.row4 {
+.Categorietable_row4 {
 	display: table-row;
 }
 
-.row5 {
+.Categorietable_row5 {
 	display: table-row;
 }
 
@@ -26,16 +34,59 @@
 	border-bottom: 1px solid #DDD;
 }
 
-.cell col1{
-	border-rigth: 1px solid #DDD;
-}
-
 
 .col{
 	width: 30%;
 }
 
-.text{
+.col2 .col9 .col16 .col22{
+	color: #fff;
+    background: #ffc107;
+    margin: 0;
+    border-radius: 16px;
+}
+
+.Categorie_text{
 	font-size:30px;
 	color:red;
 }
+
+.Categorie_box {
+    display: flex;
+     justify-content: center;
+     gap: 30px;
+     margin-bottom: 30px;
+ }
+ .Categorie_header {
+     margin: 30px 0;
+     margin-left: 70px;
+     color: black;
+     font-size: 22px;
+     font-weight: bold;
+     text-align: center;
+ }
+ .Categorie_title {
+     margin-bottom: 10px;
+     font-size: 19px;
+     font-weight: bold;
+     text-align: center;
+ }
+ .Categorie_text1 {
+     font-size: 15px;
+     text-align: center;
+     color: black;
+ }
+ 
+ .Categorie_text2 {
+     font-size: 11px;
+     text-align: center;
+     color: #666;
+ }
+ 
+ .Categorie_minibox {
+     border: 1px solid #d8d8d8;
+     height: 450px;
+ }
+ .Categorie_minibox img {
+     margin-bottom: 10px;
+ }
