--- a/HelpKitchenProject/src/main/webapp/css/Rankingdesign.css
+++ b/HelpKitchenProject/src/main/webapp/css/Rankingdesign.css
@@ -1,1 +1,50 @@
 @charset "UTF-8";
+
+.Ranking_btn{
+    width: 100px;
+    height: 40px;
+    background: #ffc107;
+    border: none;
+    border-radius: 0.25rem;
+}
+
+.Ranking_box {
+    display: flex;
+     justify-content: center;
+     gap: 30px;
+     margin-bottom: 30px;
+ }
+ .Ranking_header {
+     margin: 30px 0;
+     margin-left: 70px;
+     color: black;
+     font-size: 22px;
+     font-weight: bold;
+     text-align: center;
+ }
+ 
+ .Ranking_title {
+     margin-bottom: 10px;
+     font-size: 19px;
+     font-weight: bold;
+     text-align: center;
+ }
+ .Ranking_text1 {
+     font-size: 15px;
+     text-align: center;
+     color: black;
+ }
+ 
+ .Ranking_text2 {
+     font-size: 11px;
+     text-align: center;
+     color: #666;
+ }
+ 
+ .Ranking_minibox {
+     border: 1px solid #d8d8d8;
+     height: 450px;
+ }
+ .Ranking_minibox img {
+     margin-bottom: 10px;
+ }
