--- a/HelpKitchenProject/src/main/webapp/css/Recipedesign.css
+++ b/HelpKitchenProject/src/main/webapp/css/Recipedesign.css
@@ -9,16 +9,9 @@ h2{
 	text-align: center;
 }
 
-.register_table {
-	width: 100%;
-	
-}
-
-.register_table2 {
-	width: 60%;
-	
-}
-
+/* .register_table {
+	width: 100%;	
+} */
 
 .register_table tr{
 	padding: 10px;
@@ -35,6 +28,7 @@ h2{
 	font-size: 16px;
 	font-weight: bold;
 	color: gray;
+	height: 100px;
 }
 
 .register_table2 td{
@@ -72,8 +66,6 @@ h2{
 	font-size:15px;
 }
 
-
-
 .register_btn{
 	font-size: 14px;
 	padding: 15px 30px;
@@ -81,4 +73,9 @@ h2{
 	color: black;
 	border: #ffc107;
 	border-radius: 20px;
+}
+
+.reciepe_category {
+	width: 18%;
+	margin: 0 3%;
 }
