--- a/HelpKitchenProject/src/main/webapp/css/Recipedesign.css
+++ b/HelpKitchenProject/src/main/webapp/css/Recipedesign.css
@@ -31,13 +31,13 @@ h2{
 	height: 100px;
 }
 
-.register_table2 td{
+/* .register_table2 td{
 	padding: 0.5em 0.5em;
 	font-size: 16px;
 	font-weight: bold;
 	color: gray;
 }
-
+ */
 
 .register_table input{
 	border:2px solid gray;
@@ -60,7 +60,6 @@ h2{
 
 .register_table textarea{
 	width:500px;
-	height:100px;
 	resize:none;
 	border:2px solid gray;
 	font-size:15px;
