--- a/HelpKitchenProject/src/main/webapp/css/Rankingdesign.css
+++ b/HelpKitchenProject/src/main/webapp/css/Rankingdesign.css
@@ -56,8 +56,6 @@
      left: -10px;
      top: -10px;
      z-index: 100;
-     background: #ffc107;
-     border: 1px solid #ffc107;
      box-shadow: 3px 3px 0 rgb(0 0 0 / 8%);
      min-width: 36px;
      text-align: center;
@@ -67,3 +65,26 @@
      letter-spacing: -0.03em;
      vertical-align: unset;
  }
+ 
+input[type="radio"] {display:none;}
+input[type="radio"] + label {
+	display:inline-block;
+	padding:15px;
+	background:#ccc;
+	border-radius:0.25rem;
+	color:#999;
+	cursor:pointer;
+	margin-bottom:1%;}
+input[type="radio"]:checked + label {
+	background: #198754;
+	border-radius: 0.25rem;
+	color:#000; width:10%
+	}
+.conbox {
+	background:white;
+	margin:0 auto;
+	display:none;}
+input[id="tab01"]:checked ~ .con1 {display:block;}
+input[id="tab02"]:checked ~ .con2 {display:block;}
+input[id="tab03"]:checked ~ .con3 {display:block;}
+#tab01 {margin-left: 3%}
