--- a/HelpKitchenProject/src/main/webapp/css/Categoriedesign.css
+++ b/HelpKitchenProject/src/main/webapp/css/Categoriedesign.css
@@ -1,11 +1,10 @@
 @charset "UTF-8";
 
 
-
-.a { text-decoration:none
+.a { text-decoration:none;
 }
 
-.a:hover { text-decoration:none
+.a:hover { text-decoration:none;
 }
 
 .Categorietable_row {
@@ -42,16 +41,6 @@
 	width: 30%;
 }
 
-.col2, .col4{
-	font-size: 18px;
-	font-weight: 700;
-	background-color: #ffc107;
-	backgorund-size: 50% 50%;
-	color: black;
-	border: #ffc107;
-    border-radius: 20px;
-}
-
 .Categorie_box {
 	display: flex; 
 	justify-content: center; 
@@ -59,28 +48,28 @@
 	margin-bottom: 30px; 
 	flex-wrap: wrap;
  }
- .Categorie_header {
+/*  .Categorie_header {
      margin: 30px 0;
      margin-left: 70px;
      color: black;
      font-size: 22px;
      font-weight: bold;
      text-align: center;
- }
+ } */
  .Categorie_title {
      margin-bottom: 10px;
-     font-size: 19px;
+     font-size: 30px;
      font-weight: bold;
      text-align: center;
  }
  .Categorie_text1 {
-     font-size: 15px;
+     font-size: 20px;
      text-align: center;
      color: black;
  }
  
  .Categorie_text2 {
-     font-size: 11px;
+     font-size: 15px;
      text-align: center;
      color: #666;
  }
@@ -95,10 +84,12 @@
 .accordion-button {
 	color: black;
 	font-weight: bold;
+	font-size: 20px;
 }
 .accordion-button:not(.collapsed) {
 	color: black;
 	font-weight: bold;
+	font-size: 20px;
 	background-color: #198754;
 }
 .accordion-button:focus {
