--- a/HelpKitchenProject/src/main/webapp/css/style.css
+++ b/HelpKitchenProject/src/main/webapp/css/style.css
@@ -1,17 +1,22 @@
 @charset "UTF-8";
 
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+	font-family: 'Gamja Flower', cursive;
+}
+
 a {
 	text-decoration-line: none;
 }
+
 .login_header {
 	height: 20vh;
 }
 .login-form {
 	width: 400px;
-	margin: 10vh auto;
+	margin: 8vh auto;
 }
 .login-form h1 {
-	font-size: 32px;
+	font-size: 40px;
 	text-align: center;
 	margin-bottom: 30px;
 }
@@ -40,17 +45,17 @@ a {
 	margin-bottom: 20px;
 	cursor: pointer;
 }
-.question h5{
+/* .question h5{
 	font-size: 16px;
 }
 .message {
 	color: gray;
-}
+} */
 .introduce p {
-	font-size: 12px;
+	font-size: 16px;
 }
 .agree_form {
-	margin: 5vh auto;
+	margin: 7vh auto;
 	width: 500px;
 }
 .agree_form h2,
@@ -70,20 +75,27 @@ a {
 	border-radius: 0.25rem;
 	cursor: pointer;
 }
-.checkMsg {
+/* .checkMsg {
 	margin-top: 10px; 
 	text-align: center; 
 	color: #FF0000; 
 	display: none;
-}
+} */
 .d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top {
   	position: sticky;
 }
-.img-thumbnail {
+/* .img-thumbnail {
 	border: 1px solid #fff;
 }
 ul .nav justify-content-center {
 	background-color: red;
+}
+ */
+.btn-area2 button {width: 100px; height: 40px;
+	background: #ffc107;
+	border: none;
+	border-radius: 0.25rem;
+	font-size: 17px;
 }
 
 .btn-area3 button {
@@ -103,13 +115,12 @@ table {width: 50%; margin: 0 auto;}
 /* swiper styles */
 html, body {
 	position: relative;
-	height: 100%;
 	background-color: #fff;
+	font-family: 'Gamja Flower', cursive;
 }
 
 body {
-	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-	font-size: 14px;
+	font-size: 20px;
 	color: #000;
 	margin: 0;
 	padding: 0;
@@ -118,7 +129,9 @@ body {
 .swiper {
 	width: 70%;
 	height: auto;
-	margin-top:2%;
+	margin-top:1%;
+	margin-bottom:1%;
+	background-color: WhiteSmoke;
 }
 .swiper-slide {
 	text-align: center;
@@ -137,6 +150,11 @@ body {
 	-ms-flex-align: center;
 	-webkit-align-items: center;
 	align-items: center;
+	background-color: Whitesmoke;
+}
+
+.swiper-slide .swiper-slide-active {
+	background-color: Whitesmoke;
 }
 
 .swiper-button-next:after, 
@@ -155,4 +173,25 @@ body {
 }
 .m_title {
 	color:black;
+	font-size: 22px;
+	font-weight: bold;
 }
+
+.m_h3{
+	background-color: Whitesmoke;
+	color: black;
+	font-size:50px;
+	font-weight: bold;
+}
+
+.nav-link {
+color: black;
+font-size: 30px;
+font-weight: 1000;
+}
+
+input, button {
+	font-family: 'Gamja Flower', cursive;
+}
+
+
